App terminada sin icono y nombre

--- a/fraudes/android/app/src/main/AndroidManifest.xml
+++ b/fraudes/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
    <application
         android:label="fraudes"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/iconfraudes">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
