Se modificó nombre y logotipo

--- a/fraudes/android/app/src/main/AndroidManifest.xml
+++ b/fraudes/android/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
   <uses-permission android:name="android.permission.INTERNET" />
 
    <application
-        android:label="fraudes"
-        android:icon="@mipmap/iconfraudes">
+        android:label="Antiextorsión Durango"
+        android:icon="@mipmap/launcher_fraude">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
