--- a/fraudes/pubspec.yaml
+++ b/fraudes/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^0.13.1
   cached_network_image: ^3.0.0
   url_launcher: ^6.1.2
+  flutter_launcher_icons: ^0.10.0
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +56,12 @@ dev_dependencies:
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
-
+flutter_icons:
+  android: "launcher_fraude"
+  ios: true
+  image_path: "assets/images/icon_final.png"
+  adaptive_icon_background: "#D2D8DA"
+  adaptive_icon_foreground: "assets/images/logo_fraudes_ff.png"
 
 # The following section is specific to Flutter.
 flutter:
