--- a/fraudes/pubspec.yaml
+++ b/fraudes/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cached_network_image: ^3.0.0
   url_launcher: ^6.1.2
   flutter_launcher_icons: ^0.10.0
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_test:
