--- a/fraudes/android/app/src/main/AndroidManifest.xml
+++ b/fraudes/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.c5durango.antiextorsiondurango">
+    package="com.c5durango.antiextorsiondgo">
     
   <uses-permission android:name="android.permission.INTERNET" />
 
    <application
-        android:label="Antiextorsión Durango"
+        android:label="Antiextorsión Dgo"
         android:icon="@mipmap/launcher_fraude">
         <activity
             android:name=".MainActivity"
@@ -12,6 +12,7 @@
             android:theme="@style/LaunchTheme"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|smallestScreenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
             android:hardwareAccelerated="true"
+            android:exported="true"
             android:windowSoftInputMode="adjustResize">
             <!-- Specifies an Android theme to apply to this Activity as soon as
                  the Android process has started. This theme is visible to the user
