Se modificó logotipo y nombre de paquete

--- a/fraudes/android/app/src/main/AndroidManifest.xml
+++ b/fraudes/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.c5durango.antiextorsiondgo">
+    package="com.c5durango.antiextorsiondurango">
     
   <uses-permission android:name="android.permission.INTERNET" />
 
