--- a/fraudes/pubspec.yaml
+++ b/fraudes/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.2+2
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -40,8 +40,8 @@ dependencies:
   http: ^0.13.1
   cached_network_image: ^3.0.0
   url_launcher: ^6.1.2
-  flutter_launcher_icons: ^0.10.0
   change_app_package_name: ^1.1.0
+  flutter_launcher_icons: ^0.11.0
 
 dev_dependencies:
   flutter_test:
@@ -60,9 +60,9 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_fraude"
   ios: true
-  image_path: "assets/images/icon_final.png"
+  image_path: "assets/images/logo_app.jpg"
   adaptive_icon_background: "#D2D8DA"
-  adaptive_icon_foreground: "assets/images/logo_fraudes_ff.png"
+  adaptive_icon_foreground: "assets/images/logo_app.jpg"
 
 # The following section is specific to Flutter.
 flutter:
